adding header name and image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <h1>Adam Abdallah</h1>
+            <img src="imgs/adam.png" alt="Adam Abdallah">
+        </div>
+
+    </div>
 </body>
 </html>
