Adding Hobbies and small bio about myself

--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
             <h1>Adam Abdallah</h1>
             <img src="imgs/adam.png" alt="Adam Abdallah">
         </div>
-
+        <h4 id="title">Tech enthusiast passionate about innovation and exploring new solutions. Always eager to learn and collaborate!</h4>
+        
+        <div class="hobbies">
+            <h2>My Hobbies</h2>
+            <ul>
+                <li>Computer Science</li>
+                <li>CyberSecurity</li>
+                <li>Learning new technologies</li>
+            </ul>
+ 
     </div>
 </body>
 </html>
