Adding My Top 3 Interests

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
                 <li>CyberSecurity</li>
                 <li>Learning new technologies</li>
             </ul>
- 
+        </div>
+
+        <div class="interests">
+            <h2>My Interests</h2>
+            <ul>
+                <li>Web Development</li>
+                <li>Red Hat Hacking</li>
+                <li>Machine Learning</li>
+            </ul>
+        </div>
+
     </div>
 </body>
 </html>
