Adding the footer to the page

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <div class="container">
         <div class="header">
             <h1>Adam Abdallah</h1>
+            <br>
             <img src="imgs/adam.png" alt="Adam Abdallah">
+            <h4>Computer Science Student</h4>
+
         </div>
         <h4 id="title">Tech enthusiast passionate about innovation and exploring new solutions. Always eager to learn and collaborate!</h4>
         
         <div class="hobbies">
-            <h2>My Hobbies</h2>
+            <h2>My Hobbies: </h2>
             <ul>
                 <li>Computer Science</li>
                 <li>CyberSecurity</li>
@@ -24,7 +27,7 @@
         </div>
 
         <div class="interests">
-            <h2>My Interests</h2>
+            <h2>My Interests: </h2>
             <ul>
                 <li>Web Development</li>
                 <li>Red Hat Hacking</li>
@@ -32,6 +35,9 @@
             </ul>
         </div>
 
+        <div class="footer">
+            <p>Created by &copy;Adam Abdallah</p>
+        </div>
     </div>
 </body>
 </html>
